--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3743,10 +3743,13 @@
 /* Footer */
 
 	#footer {
-		background-color: #e5474b;
-		color: #f2a3a5;
+		/*background-color: #e5474b;*/
+		background-color: #3b3232; 
+		color: #3b3232;
+		/*color: #f2a3a5;*/
 		padding: 4em 0 2em 0;
-		background: #e5474b;
+		/*background: #e5474b;*/
+		background : #1c1c1c; 
 	}
 
 		#footer input, #footer select, #footer textarea {
